@@ -394,7 +394,7 @@ is the axis object and the second argument is the index of the axis</p>
     </span>
     <span class='bound note title'>Bound</span>
     <span class='desc'>
-      EXPERIMENTAL RESCALE An addition <code>re*</code> API which will adjust the scales for any domains with callbacks
+      EXPERIMENTAL RESCALE An additional <code>re*</code> API which will adjust the scales for any domains with callbacks
 See <code>h_domain</code> and <code>v_domain</code>.
 
     </span>
@@ -404,11 +404,13 @@ See <code>h_domain</code> and <code>v_domain</code>.
       <a href='#min_x-dynamic'>
         #
 (void)
-<b>min_x</b><span>()</span>
+<b>min_x</b><span>(auto)</span>
       </a>
     </span>
     <span class='bound note title'>Bound</span>
     <span class='desc'>
+      If the auto parameter is true it will only get the value for layers which share the overall plot scale and don&#39;t overwrite it with its own.
+
     </span>
   </li>
   <li>
@@ -416,7 +418,7 @@ See <code>h_domain</code> and <code>v_domain</code>.
       <a href='#max_x-dynamic'>
         #
 (void)
-<b>max_x</b><span>()</span>
+<b>max_x</b><span>(auto)</span>
       </a>
     </span>
     <span class='bound note title'>Bound</span>
@@ -428,7 +430,7 @@ See <code>h_domain</code> and <code>v_domain</code>.
       <a href='#min_y-dynamic'>
         #
 (void)
-<b>min_y</b><span>()</span>
+<b>min_y</b><span>(auto)</span>
       </a>
     </span>
     <span class='bound note title'>Bound</span>
@@ -440,7 +442,7 @@ See <code>h_domain</code> and <code>v_domain</code>.
       <a href='#max_y-dynamic'>
         #
 (void)
-<b>max_y</b><span>()</span>
+<b>max_y</b><span>(auto)</span>
       </a>
     </span>
     <span class='bound note title'>Bound</span>
@@ -564,7 +566,7 @@ Update any automatic scales</p>
     </p>
     <div class='docstring'>
   <p>EXPERIMENTAL RESCALE
-An addition <code>re*</code> API which will adjust the scales for any domains with callbacks
+An additional <code>re*</code> API which will adjust the scales for any domains with callbacks
 See <code>h_domain</code> and <code>v_domain</code>.</p>
 </div>
 <div class='tags'>
@@ -574,17 +576,22 @@ See <code>h_domain</code> and <code>v_domain</code>.</p>
     <p class='signature' id='min_x-dynamic'>
       #
 (void)
-<b>min_x</b><span>()</span>
+<b>min_x</b><span>(auto)</span>
       <span class='bound note'>Bound</span>
       <br>
     </p>
-    
+    <div class='docstring'>
+  <p>If the auto parameter is true it will only get the value for layers which
+share the overall plot scale and don&#39;t overwrite it with its own.</p>
+</div>
+<div class='tags'>
+</div>
   </div>
   <div class='method_details'>
     <p class='signature' id='max_x-dynamic'>
       #
 (void)
-<b>max_x</b><span>()</span>
+<b>max_x</b><span>(auto)</span>
       <span class='bound note'>Bound</span>
       <br>
     </p>
@@ -594,7 +601,7 @@ See <code>h_domain</code> and <code>v_domain</code>.</p>
     <p class='signature' id='min_y-dynamic'>
       #
 (void)
-<b>min_y</b><span>()</span>
+<b>min_y</b><span>(auto)</span>
       <span class='bound note'>Bound</span>
       <br>
     </p>
@@ -604,7 +611,7 @@ See <code>h_domain</code> and <code>v_domain</code>.</p>
     <p class='signature' id='max_y-dynamic'>
       #
 (void)
-<b>max_y</b><span>()</span>
+<b>max_y</b><span>(auto)</span>
       <span class='bound note'>Bound</span>
       <br>
     </p>
