@@ -1,4 +1,4 @@
-// Generated by CoffeeScript 1.11.1
+// Generated by CoffeeScript 1.12.7
 (function() {
   var bind = function(fn, me){ return function(){ return fn.apply(me, arguments); }; },
     extend = function(child, parent) { for (var key in parent) { if (hasProp.call(parent, key)) child[key] = parent[key]; } function ctor() { this.constructor = child; } ctor.prototype = parent.prototype; child.prototype = new ctor(); child.__super__ = parent.prototype; return child; },
@@ -237,10 +237,10 @@
       if (this.h_domain != null) {
         h_domain = typeof this.h_domain === 'function' ? this.h_domain.call(this) : this.h_domain.slice(0);
         if (h_domain[0] === 'auto') {
-          h_domain[0] = this.min_x();
+          h_domain[0] = this.min_x(true);
         }
         if (h_domain[1] === 'auto') {
-          h_domain[1] = this.max_x();
+          h_domain[1] = this.max_x(true);
         }
         if (h_domain[0] !== this.h.domain()[0] || h_domain[1] !== this.h.domain()[1]) {
           this.h.domain(h_domain);
@@ -253,10 +253,10 @@
       if (this.v_domain != null) {
         v_domain = typeof this.v_domain === 'function' ? this.v_domain.call(this) : this.v_domain.slice(0);
         if (v_domain[0] === 'auto') {
-          v_domain[0] = this.min_y();
+          v_domain[0] = this.min_y(true);
         }
         if (v_domain[1] === 'auto') {
-          v_domain[1] = this.max_y();
+          v_domain[1] = this.max_y(true);
         }
         if (v_domain[0] !== this.v.domain()[0] || v_domain[1] !== this.v.domain()[1]) {
           this.v.domain(v_domain);
@@ -278,26 +278,74 @@
       return this;
     };
 
-    Plot.prototype.min_x = function() {
-      return d3.min(this.layers, function(l) {
+    Plot.prototype.min_x = function(auto) {
+      var l;
+      return d3.min((auto ? (function() {
+        var i, len, ref, results;
+        ref = this.layers;
+        results = [];
+        for (i = 0, len = ref.length; i < len; i++) {
+          l = ref[i];
+          if (l.h === this.h) {
+            results.push(l);
+          }
+        }
+        return results;
+      }).call(this) : this.layers), function(l) {
         return l.min_x();
       });
     };
 
-    Plot.prototype.max_x = function() {
-      return d3.max(this.layers, function(l) {
+    Plot.prototype.max_x = function(auto) {
+      var l;
+      return d3.max((auto ? (function() {
+        var i, len, ref, results;
+        ref = this.layers;
+        results = [];
+        for (i = 0, len = ref.length; i < len; i++) {
+          l = ref[i];
+          if (l.h === this.h) {
+            results.push(l);
+          }
+        }
+        return results;
+      }).call(this) : this.layers), function(l) {
         return l.max_x();
       });
     };
 
-    Plot.prototype.min_y = function() {
-      return d3.min(this.layers, function(l) {
+    Plot.prototype.min_y = function(auto) {
+      var l;
+      return d3.min((auto ? (function() {
+        var i, len, ref, results;
+        ref = this.layers;
+        results = [];
+        for (i = 0, len = ref.length; i < len; i++) {
+          l = ref[i];
+          if (l.v === this.v) {
+            results.push(l);
+          }
+        }
+        return results;
+      }).call(this) : this.layers), function(l) {
         return l.min_y();
       });
     };
 
-    Plot.prototype.max_y = function() {
-      return d3.max(this.layers, function(l) {
+    Plot.prototype.max_y = function(auto) {
+      var l;
+      return d3.max((auto ? (function() {
+        var i, len, ref, results;
+        ref = this.layers;
+        results = [];
+        for (i = 0, len = ref.length; i < len; i++) {
+          l = ref[i];
+          if (l.v === this.v) {
+            results.push(l);
+          }
+        }
+        return results;
+      }).call(this) : this.layers), function(l) {
         return l.max_y();
       });
     };
