@@ -1,4 +1,4 @@
-// Generated by CoffeeScript 1.11.1
+// Generated by CoffeeScript 1.12.7
 (function() {
   var c3, initialize, initialized,
     bind = function(fn, me){ return function(){ return fn.apply(me, arguments); }; },
